Correct alignment

--- a/assets/scss/molecules/_content-tiles.scss
+++ b/assets/scss/molecules/_content-tiles.scss
@@ -29,7 +29,7 @@
 
   &-landing {
     border: 0;
-    padding: 12px;
+    padding: 0;
 
     &__heading {
       font-size: 36px;
