--- a/assets/scss/molecules/_form-section.scss
+++ b/assets/scss/molecules/_form-section.scss
@@ -19,6 +19,7 @@
   &__info {
     min-height: 58rem;
     border-right: 1px solid $tile-border-colour;
+    padding-left: 24px;
 
     .light-grey {
       font-weight: 100;
