--- a/assets/scss/molecules/_ind-description-list.scss
+++ b/assets/scss/molecules/_ind-description-list.scss
@@ -8,11 +8,11 @@
 
   &__item {
     padding: 15px;
-    width: 48%;
+    width: 47%;
     float: left;
     position: relative;
     display: inline-block;
-    margin: 10px 10px;
+    margin: 10px 17px;
     border: 1px solid $tile-border-colour;
     overflow: hidden;
     color: $text-colour;
@@ -65,11 +65,11 @@
 
   &__item {
     padding: 15px;
-    width: 32%;
+    width: 30%;
     float: left;
     position: relative;
     display: inline-block;
-    margin: 10px 6px;
+    margin: 10px 17px;
     border: 1px solid $tile-border-colour;
     overflow: hidden;
     color: $text-colour;
