--- a/assets/scss/molecules/_main-logo.scss
+++ b/assets/scss/molecules/_main-logo.scss
@@ -25,6 +25,7 @@
 .dit-logo {
   height: 32px;
   margin-top: 4px;
+  margin-left: -16px;
 }
 
 .dit-nav-contact {
